samples/_failures_safe/1761243545_000cfd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70e13e01.c: In function ‘main’:
./samples/SAFE/__tmp_70e13e01.c:120:12: error: missing terminating " character
  120 |     printf("Enter log entries (format: YYY
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_70e13e01.c:120:5: error: expected expression at end of input
  120 |     printf("Enter log entries (format: YYY
      |     ^~~~~~
./samples/SAFE/__tmp_70e13e01.c:120:5: error: expected declaration or statement at end of input
